--- a/index.html
+++ b/index.html
@@ -15,15 +15,20 @@
             <h1>Mama's toDoList</h1>
         </header>
         <form>
-            <input type="text" class="todo-input">
+            <input type="text" class="todo-input" />
             <button class="todo-button" ype="submit">
                 <i class="fas fa-plus-square"></i>
             </button>
+            <div class="select">
+                <select name="todos" id="filter-todo">
+                    <option value="all">All</option>
+                    <option value="completed">Completed</option>
+                    <option value="uncompleted">Uncompleted</option>
+                </select>
+            </div>
         </form>
         <div class="todo-container">
-         <ul class="todo-list">
-          
-         </ul>  
+         <ul class="todo-list"></ul>  
     </div>
 
     <script src="./app.js"></script>
