--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         </header>
         <form>
             <input type="text" class="todo-input" />
-            <button class="todo-button" ype="submit">
+            <button class="todo-button" type="submit">
                 <i class="fas fa-plus-square"></i>
             </button>
             <div class="select">
-                <select name="todos" id="filter-todo">
+                <select name="todos" class="filter-todo">
                     <option value="all">All</option>
                     <option value="completed">Completed</option>
                     <option value="uncompleted">Uncompleted</option>
